--- a/alpha_beta_fun.ipynb
+++ b/alpha_beta_fun.ipynb
@@ -216,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "vel_col = \"D_DT_EKS\"\n",
+    "vel_col = \"D_DT_geo\"\n",
     "h_col = \"height\""
    ]
   },
