--- a/alpha_beta_v0_fun.ipynb
+++ b/alpha_beta_v0_fun.ipynb
@@ -542,7 +542,7 @@
     "vel1 = []\n",
     "\n",
     "# smooth data\n",
-    "for v in range(1, len(vel_raw)-1):\n",
+    "for v in range(1, len(vel)-1):\n",
     "    vel1.append((vel[v-1]+vel[v]+vel[v+1]) / 3)\n",
     "    alt1.append(alt[v])\n",
     "\n",
