added Jupyter usage

--- a/alpha_beta_v0_fun.ipynb
+++ b/alpha_beta_v0_fun.ipynb
@@ -13,7 +13,12 @@
    "source": [
     "This notebook allows you to calculate the basic dimensionless alpha - beta parameters for a set of fireball data after [Gritsevich 2012](https://doi.org/???). This use the exponential atmosphere simplification. To use a complete atmosphere model for your fireball, please see [Lyytinen et al. 2016](https://doi.org/10.1016/j.pss.2015.10.012).\n",
     "\n",
-    "It also allows you to determine the initial velocity as well as manually fit all three parameters for difficult cases. \n"
+    "It also allows you to determine the initial velocity as well as manually fit all three parameters for difficult cases. \n",
+    "\n",
+    "**for usage, see end of notebook**",
+    "though for basic usage of running a cell",
+    "|   shift + enter  | run a cell |\n",
+    "|   up/down arrows  | move between cells |"
    ]
   },
   {
@@ -954,6 +959,58 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usage for this \"Jupyter Notebook\". \n",
+    "This is a way of combining text and code (here we use the programming language Python3) and running it in a web browser. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "some useful links for help with jupyter notebooks:\n",
+    "\n",
+    "https://towardsdatascience.com/jypyter-notebook-shortcuts-bf0101a98330"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "some useful links for help with python:\n",
+    "\n",
+    "https://howchoo.com/g/m2vmotm5odn/basic-math-in-python\n",
+    "\n",
+    "https://pythonprogramming.net/math-basics-python-3-beginner-tutorial/\n",
+    "\n",
+    "https://en.wikibooks.org/wiki/Non-Programmer%27s_Tutorial_for_Python_3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### maths usage\n",
+    "| operator | name   | example |\n",
+    "|:------|:---------------|:------|\n",
+    "|   +  | addition| 2 + 2 |\n",
+    "|   -  | subtraction| 2 - 2 |\n",
+    "|   *  | multiplication| 2 * 2 |\n",
+    "|   /  | division| 2 / 2 |\n",
+    "|   **  | exponent| 2**4 |\n",
+    "\n",
+    "\n",
+    "#### Jupyter usage\n",
+    "| operator | name  |\n",
+    "|:------|:---------------|\n",
+    "|   shift + enter  | run a cell |\n",
+    "|   up/down arrows  | move between cells |"
+   ]
   },
   {
    "cell_type": "code",
