--- a/alpha_beta_v0_fun.ipynb
+++ b/alpha_beta_v0_fun.ipynb
@@ -15,8 +15,9 @@
     "\n",
     "It also allows you to determine the initial velocity as well as manually fit all three parameters for difficult cases. \n",
     "\n",
-    "**for usage, see end of notebook**",
-    "though for basic usage of running a cell",
+    "**for usage, see end of notebook**\n",
+    "though for basic usage of running a cell:\n",
+    "\n",
     "|   shift + enter  | run a cell |\n",
     "|   up/down arrows  | move between cells |"
    ]
