fixing markdown issues

--- a/alpha_beta_v0_fun.ipynb
+++ b/alpha_beta_v0_fun.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook allows you to calculate the basic dimensionless alpha - beta parameters for a set of fireball data after [Gritsevich 2012](https://doi.org/???). This use the exponential atmosphere simplification. To use a complete atmosphere model for your fireball, please see [Lyytinen et al. 2016](https://doi.org/10.1016/j.pss.2015.10.012).\n",
+    "This notebook allows you to calculate the basic dimensionless $\\alpha - \\beta$ parameters for a set of fireball data after [Sansom et al. 2020](https://doi.org/10.3847/1538-4357/ab4516) and [Gritsevich 2012](https://doi.org/10.1134/S0010952512010017). This uses the exponential atmosphere simplification. To use a complete atmosphere model for your fireball, please see [Lyytinen et al. 2016](https://doi.org/10.1016/j.pss.2015.10.012).\n",
+    "\n",
+    "\n",
     "\n",
     "It also allows you to determine the initial velocity as well as manually fit all three parameters for difficult cases. \n",
     "\n",
@@ -19,6 +21,7 @@
     "\n",
     "though for basic usage of running a cell:\n",
     "\n",
+    "| operator | name  |\n",
     "|:------|:---------------|\n",
     "|   shift + enter  | run a cell |\n",
     "|   up/down arrows  | move between cells |"
