--- a/alpha_beta_fun.ipynb
+++ b/alpha_beta_fun.ipynb
@@ -398,8 +398,8 @@
    ],
    "source": [
     "plt.scatter(Vvalues, Yvalues,marker='x', label=None)  \n",
-    "plt.xlabel(\"normalised height\")\n",
-    "plt.ylabel(\"normalised velocity\")\n",
+    "plt.xlabel(\"normalised velocity\")\n",
+    "plt.ylabel(\"normalised height\")\n",
     "plt.plot(x, y, color='r')\n",
     "# plt.xlim(0.4, 1.23)\n",
     "# plt.ylim(6, 12)\n",
